--- a/index.ipynb
+++ b/index.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "\n",
     "## Introduction\n",
-    "In \"week 0\", we installed the key tools required to do data capture and cleaning with Python and to complete this course (git, GitHub and Anaconda). In week 1, we introduced the basics of Python programming - variables, some simple data types (String, Integer, Floating Point, Boolean and Date Time), some of the more complex data types (List, Tuple, Set and Dictionary), and control flow using if statements and (for looping over collections), \"for-in\" loops and (for extra credit) list comprehensions. *Don't worry if you're still a little confused by list comprehensions - you don't have to master them to be able to clean up data!*\n",
+    "In \"week 0\", we installed the key tools required to do data capture and cleaning with Python and to complete this course (git, GitHub and Anaconda). In week 1, we introduced the basics of Python programming - variables, some simple data types (String, Integer, Floating Point, Boolean and Date Time), some of the more complex data types (List, Tuple, Set and Dictionary), and control flow using if statements, and (for looping over collections), \"for-in\" loops and (for extra credit) list comprehensions. *Don't worry if you're still a little confused by list comprehensions - you don't have to master them to be able to clean up data!*\n",
     "\n",
     "A lot of the tasks last week were \"small motion\" lessons. You got to practice little bits of a project, but didn't really pull it together into a more realistic end-to-end experience. Today, we're going to build on the knowledge you gained last week to do an end to end data cleaning example. We're going to import some company data, clean it up and then save it to a new file.\n",
     "\n",
-    "To keep things easy, we'll just focus on cleaning up the capitalization of text from a csv file filled with company information. In a real world example you'd probably want to do more complicated clean up, but once you've seen how to do the basics, it'll be quite easy to add a little more sophistication or complexity to the data clean up in future lessons.\n",
+    "To keep things easy, we'll just focus on cleaning up the capitalization and consistency of text from a csv file filled with company information. In a real world example you'd probably want to do more complicated clean up, but once you've seen how to do the basics, it'll be quite easy to add a little more sophistication or complexity to the data clean up in future lessons.\n",
     "\n",
     "We're also going to have to introduce a few new concepts along the way. We're going to introduce the concept of libraries (pre-written software that you can use to write your code more quickly), Pandas (one of the most popular libraries for working with data in Python) and the Pandas Series and DataFrame (the standard ways to store information within Pandas). It might seem like a lot of theory, but in practice you'll be using Pandas DataFrames for most of your data import, cleanup and export operations, so it's important to take the time to introduce them now.\n",
     "\n",
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary Statistics\n",
+    "## Summary Statistics (Numerical Columns)\n",
     "\n",
     "A good next step is often to check out the summary statistics for the data set. An easy way to start to investigate that is by calling the `describe()` method:"
    ]
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It takes any numeric fields in the data sets and provides a range of staistics from the number of data points to the mean, minimum, maximum and even the standard deviation and quartiles for the values. If you don't happen to know what all of those mean, don;'t worry - this is a data cleaning class, not a statistics class. Bottom line, DataFrames will tell you everythign you might want to know about a data set - along with a few things you may not even care about!\n",
+    "It takes any numeric fields in the data sets and provides a range of staistics from the number of data points to the mean, minimum, maximum and even the standard deviation and quartiles for the values. If you don't happen to know what all of those mean, don't worry - this is a data cleaning class, not a statistics class! **Bottom line, DataFrames will tell you everythign you might want to know about a data set - along with a few things you may not even care about!**\n",
     "\n",
     "If you imported a really large spreadsheet with a lot of numeric columns, you can refine your request by asking (for example) for just the mean or the median, just for one column:"
    ]
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's a lot going on in the code above, but the important part is that if you just want to get the median for the NumberofEmployees column you can just run `df[\"NumberofEmployees\"].mean()`."
+    "There's a lot going on in the code above, but the important part is that if you just want to get the median for the NumberofEmployees column you can just run `df[\"NumberofEmployees\"].mean()`. Try it in the blank code cell below."
    ]
   },
   {
@@ -230,9 +230,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
-    "\n"
+    "## Summary Statistics (Categorical Columns)\n",
+    "\n",
+    "Sometimes you might also want summary statistics for a categorical column. A categorical columnis one that contains text, but only certain possible values. For example, if you were filling out a form to describe your conpany, you might have a drop down list for \"company type\" and \"state of incorporation\". Those would be categorical columns. An example of a field that is not a categorical column would be the company name.\n",
+    "\n",
+    "Let's have a look at the \"EntityType\" field. Lets start by getting a list of all the different values and the number of records with each value by using the `value_counts()` method:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['EntityType'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hmm, that's interesting. It looks like we need to do a little bit of clean up on our data. You can see that Python (as with most programming languages) cares about capitalization, but it means that (for example) it thinks there are three \"llc\"'s and three \"LLC\"'s when clearly we'd rather it just tell us that there are six LLC's - irrespective of capitalization.\n",
+    "\n",
+    "Now, for a data set this small, we *could* just go in manually and fix all of the data, but if this was a larger data set or even a daily or weekly import, that would become tedious, so let's see if we can fix this. First wee need to figure out how to iterate over the data in a DataFrame, and then we need to take code similar to what we wrote before to fix the capitalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterating over a DataFrame\n",
+    "\n",
+    "Lets start by figuring out how to iterate over a DataFrame. ***Generally it's a good idea when programming to take very small steps, get them working and then put them together. Usually when you take big steps you end up spending hours falling over your own feet!***\n",
+    "\n",
+    "Let's start by just iterating over all the items in the EntityType column and printing them out. Lets try syntax pretty similar to that we used last week for iterating over collections - the `for ... in` syntax:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in df.index:\n",
+    "    print(df.at[i, 'EntityType'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That looks pretty good! Now all we need to do is write the code so the cases are consistent. We could write one piece of code for the s corps and another for the c corps, but by capitalizing everything using the `.upper()` method, we can solve all of our data issues in one go."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in df.index:\n",
+    "    df.at[i, 'EntityType'] = df.at[i, 'EntityType'].upper()\n",
+    "    print(df.at[i, 'EntityType'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Selectors to Tranform DataFrames\n",
+    "\n",
+    "While it's possible (and sometimes useful) to iterate over all of the values for a column in a DataFrame, it's also possible to shortcut the process by using selectors. Lets say I want to take every value in the EntityType column that has a value of \"llc\" and replace it with \"LLC\", the following code will do that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets start by reloading the initial data\n",
+    "df2 = pd.read_csv('sample_data.csv')\n",
+    "\n",
+    "df2.loc[df2[\"EntityType\"] == \"llc\", \"EntityType\"] = \"LLC\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hmm, did that work? Try running the next cell and let's see!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2['EntityType'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's better! There are lots of ways of applying transformations to information stored within a DataFrame, but hopefully the two examples above have at least given you a starting point. Now the final step is to take our cleaned data, and save it back to a file..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('updated_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we just need to check that the export worked by reading the data in and looking at it again . . ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('updated_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like it all worked well!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lesson we introduced the idea of libraries, the Pandas library in particular, and within that the DataFrame capability for importing, inspecting, transforming and outputting \"spreadsheet like\" data. It's an incredibly powerful toolkit. Don't worry if you are a little overwhelmed by all the things that it can do. It's a powerful tool and as we progress in the course you'll become increasingly comfortable working with it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
