--- a/index.ipynb
+++ b/index.ipynb
@@ -8,13 +8,13 @@
     "\n",
     "\n",
     "## Introduction\n",
-    "In \"week 0\", we installed the key tools required to do data capture and cleaning with Python and to complete this course (git, GitHub and Anaconda). In week 1, we introduced the basics of Python programming - variables, some simple data types (String, Integer, Floating Point, Boolean and Date Time), some of the more complex data types (List, Tuple, Set and Dictionary), and control flow using if statements, and (for looping over collections), \"for-in\" loops and (for extra credit) list comprehensions. *Don't worry if you're still a little confused by list comprehensions - you don't have to master them to be able to clean up data!*\n",
+    "In \"week 0\", we installed the key tools required to do data capture and cleaning with Python and to complete this course (git, GitHub and Anaconda). In week 1, we introduced the basics of Python programming: variables, some simple data types (String, Integer, Floating Point, Boolean and Date Time), some of the more complex data types (List, Tuple, Set and Dictionary), and control flow using if statements, and (for looping over collections), \"for-in\" loops and (for extra credit) list comprehensions. *Don't worry if you're still a little confused by list comprehensions - you don't have to master them to be able to clean up data!*\n",
     "\n",
     "A lot of the tasks last week were \"small motion\" lessons. You got to practice little bits of a project, but didn't really pull it together into a more realistic end-to-end experience. Today, we're going to build on the knowledge you gained last week to do an end to end data cleaning example. We're going to import some company data, clean it up and then save it to a new file.\n",
     "\n",
-    "To keep things easy, we'll just focus on cleaning up the capitalization and consistency of text from a csv file filled with company information. In a real world example you'd probably want to do more complicated clean up, but once you've seen how to do the basics, it'll be quite easy to add a little more sophistication or complexity to the data clean up in future lessons.\n",
+    "To keep things easy, we'll just focus on cleaning up the capitalization of text from a csv file filled with company information. In a real world example you'd probably want to do more complicated clean up, but once you've seen how to do the basics, it'll be quite easy to add a little more sophistication or complexity to the data clean up in future lessons.\n",
     "\n",
-    "We're also going to have to introduce a few new concepts along the way. We're going to introduce the concept of libraries (pre-written software that you can use to write your code more quickly), Pandas (one of the most popular libraries for working with data in Python) and the Pandas Series and DataFrame (the standard ways to store information within Pandas). It might seem like a lot of theory, but in practice you'll be using Pandas DataFrames for most of your data import, cleanup and export operations, so it's important to take the time to introduce them now.\n",
+    "We're also going to have to introduce a few new concepts along the way. We're going to introduce the concept of libraries (pre-written software that you can use to write your code more quickly), Pandas (one of the most popular libraries for working with data in Python) and the Pandas Series and DataFrame (the standard ways to store information within Pandas). It might seem like a lot of theory, but in practice you'll be using Pandas DataFrames for most of your data import, cleanup and export operations, so it's important to take the time to introduce the concepts now.\n",
     "\n",
     "\n",
     "## Objectives\n",
@@ -36,7 +36,9 @@
     "* **What's the difference between those two types?**\n",
     "* **How would you take a string containing whole numbers (no fractions or decimals) and turn it into a numeric data type?**\n",
     "* **If you have an unchanging list (e.g. a list of US states) that should not have any duplicates, what would be the best (complex) data type to store that?**\n",
-    "* **If you have a list of companies with company name, address and website for 50 companies, what two complex data types would you combine to store that information in Python?**\n",
+    "* **If you have a list of companies with company name, address and website for 50 companies, what two complex data types that we introduced last week would you combine to store that information in Python?**\n",
+    "\n",
+    "Great! Now lets learn some new things!\n",
     "\n",
     "## Introducing Libraries\n",
     "Libraries are pre-written pieces of software that you can use to write software more quickly. There are lots of pre-written libraries in Python for doing everything from storing and manipulating data to plotting graphs to creating Neural Networks. \n",
@@ -52,7 +54,7 @@
     "In practice we're going to use a DataFrame most of the time as we'll often be importing two dimensional data from csv files or creating it by pulling information from an API or a website.\n",
     "\n",
     "## An Overview of the Data Cleaning Process\n",
-    "In practice, the overall process of data cleaning that we're going to run through today is pretty straightforward:\n",
+    "The overall process of data cleaning that we're going to run through today is pretty straightforward:\n",
     "* **Import data** - from a csv file into Python (specifically saving it in a Pandas DataFrame)\n",
     "* **\"Look\" at the data** - perhaps running some summary statistics \n",
     "* **Clean up the data** - iterating over the data in any given column to clean it up\n",
@@ -84,7 +86,7 @@
    "source": [
     "Let's have a look at the code:\n",
     "* **import** is a Python key word telling Python that we're just about to give it the name of a library that we want to be able to use\n",
-    "* **pandas** is the name of the library - we generally capitalize the P when referring to the library in writing, but when we want to import it into Python, it has to be written using lower case. *If you capitalize the P and run the code you;'ll get a \"library not found\" error - feel free to try it out in the cell above!*\n",
+    "* **pandas** is the name of the library - we generally capitalize the P when referring to the library in documentation, but when we want to import it into Python, it has to be written using lower case. *If you capitalize the P and run the code you;'ll get a \"library not found\" error - feel free to try it out in the cell above!*\n",
     "* **as** is another Python keyword. This is optional, but it allows us to declare a shorter *alias* for the library so for the rest of the notebook instead of having to type `pandas` every time we want to refer to the library, we can type something else (typically something shorter to save us some typing)\n",
     "* **pd** is the common shortening of `pandas` that most Python programmers will use. It's a good idea to follow common conventions like this so that other programmers looking at your code can understand it more easily."
    ]
@@ -113,7 +115,7 @@
    "source": [
     "So, if the file exists, nothing happens at all - that is good! Try changing the file name and running the code and you'll see a \"file not found\" error. The code above is basically creating a new variable (by convention it's not unusual to call it \"df\" for \"DataFrame\" - although if you're doing something more complex you might want to give it a clearer name - perhaps company_list or something similar.\n",
     "\n",
-    "The way to read the code is that the right hand side of the equals sign gets evaluated. It goes to the Pandas library (remember, we imported Pandas **as** `pd`, so whenever we refer to pd we're refering to the Pandas library) and it's calling a method on Pandas called `read_csv()` (the docs for that method are [here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html)). The minimum required parameter for that method is the name of the file to import (in this case, `sample_data.csv`), so we're calling the `read_csv()` method in Pandas, passing it the name of the file, it returns the contents of those file in a DataFrame, and we're taking that DataFrame and assigning it to the `df` variable, so if we want to do anything with it, we can just call `df`."
+    "The way to read the code is that the right hand side of the equals sign gets evaluated. It goes to the Pandas library (remember, we imported Pandas **as** `pd`, so whenever we refer to pd we're refering to the Pandas library) and it's calling a method on Pandas called `read_csv()` (the docs for that method are [here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html)). The minimum required parameter for that method is the name of the file to import (in this case, `sample_data.csv`), so we're calling the `read_csv()` method in Pandas, passing it the name of the file. It returns the contents of those file in a DataFrame, and we're taking that DataFrame and assigning it to the `df` variable, so if we want to do anything with it, we can just call `df`."
    ]
   },
   {
@@ -197,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It takes any numeric fields in the data sets and provides a range of staistics from the number of data points to the mean, minimum, maximum and even the standard deviation and quartiles for the values. If you don't happen to know what all of those mean, don't worry - this is a data cleaning class, not a statistics class! **Bottom line, DataFrames will tell you everythign you might want to know about a data set - along with a few things you may not even care about!**\n",
+    "It takes any numeric fields in the data sets and provides a range of statistics - from the number of data points to the mean, minimum, maximum and even the standard deviation and quartiles for the values. If you don't happen to know what all of those mean, don't worry - this is a data cleaning class, not a statistics class! **Bottom line, DataFrames will tell you everything you might want to know about a data set - along with a few things you may not even care about!**\n",
     "\n",
     "If you imported a really large spreadsheet with a lot of numeric columns, you can refine your request by asking (for example) for just the mean or the median, just for one column:"
    ]
@@ -232,7 +234,7 @@
    "source": [
     "## Summary Statistics (Categorical Columns)\n",
     "\n",
-    "Sometimes you might also want summary statistics for a categorical column. A categorical columnis one that contains text, but only certain possible values. For example, if you were filling out a form to describe your conpany, you might have a drop down list for \"company type\" and \"state of incorporation\". Those would be categorical columns. An example of a field that is not a categorical column would be the company name.\n",
+    "Sometimes you might also want summary statistics for a categorical column. A categorical column is one that contains text, but only certain possible values. For example, if you were filling out a form to describe your conpany, you might have a drop down list for \"company type\" and \"state of incorporation\". Those would be categorical columns. An example of a field that is not a categorical column would be the company name or the street address.\n",
     "\n",
     "Let's have a look at the \"EntityType\" field. Lets start by getting a list of all the different values and the number of records with each value by using the `value_counts()` method:"
    ]
@@ -298,9 +300,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "And now if we go back in and re-run the value counts we'll see something much more useful:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['EntityType'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Perfect - now we can easily see the number of S corps, C corps amd LLCs - just as we might want to."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Using Selectors to Tranform DataFrames\n",
     "\n",
-    "While it's possible (and sometimes useful) to iterate over all of the values for a column in a DataFrame, it's also possible to shortcut the process by using selectors. Lets say I want to take every value in the EntityType column that has a value of \"llc\" and replace it with \"LLC\", the following code will do that."
+    "While it's possible (and sometimes useful) to iterate over all of the values for a column in a DataFrame, it's also possible to shortcut the process by using selectors. Let's say I want to take every value in the EntityType column that has a value of \"llc\" and replace it with \"LLC\", the following code will do that."
    ]
   },
   {
@@ -379,13 +404,6 @@
     "\n",
     "In this lesson we introduced the idea of libraries, the Pandas library in particular, and within that the DataFrame capability for importing, inspecting, transforming and outputting \"spreadsheet like\" data. It's an incredibly powerful toolkit. Don't worry if you are a little overwhelmed by all the things that it can do. It's a powerful tool and as we progress in the course you'll become increasingly comfortable working with it."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
